--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "telegramSignalBot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon telegramSignalBot.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
